<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/appname"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/vita_logo_removebg"
                android:text="@string/app_name" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_regular"
                android:hint="Enter Email"
                android:textSize="16sp"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/colorAccent"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/email_icon"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_regular"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/colorAccent"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/padlock"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/login_button"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/core_sans_regular"
                    android:letterSpacing="0.06"
                    android:text="@string/forgot"
                    android:textColor="@color/grey_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/core_sans_regular"
                    android:text="Don't have an account?"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/register_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ripple_login_btn"
                    android:fontFamily="@font/core_sans_medium"
                    android:letterSpacing="0.1"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>