<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DetectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:id="@+id/rel1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="4dp"
            android:gravity="end"
            android:background="@color/black">

            <TextView
                android:id="@+id/chooseOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose One"
                android:textColor="@color/white"
                android:letterSpacing="0.06"
                android:textSize="16sp"
                android:fontFamily="@font/core_sans_regular"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/chooseOne"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/mGalleryButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add_post_btn_ripple"
                    android:elevation="2dp"
                    android:src="@drawable/image"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <ImageView
                    android:id="@+id/mCameraButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add_post_btn_ripple"
                    android:elevation="2dp"
                    android:src="@drawable/add_photo"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_below="@id/rel1">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/white">

            <ImageView
                android:id="@+id/mPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/mDetectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:alpha="0"
            android:background="@drawable/button_tab_ripple"
            android:letterSpacing="0.1"
            android:includeFontPadding="false"
            android:text="@string/checkDef"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/core_sans_medium"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detectAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deficiency of"
            android:textSize="19sp"
            android:alpha="0"
            android:fontFamily="@font/core_sans_regular"
            android:textColor="@color/white"
            android:layout_below="@id/mDetectButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"/>

        <TextView
            android:id="@+id/mResultTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/grey_80"
            android:layout_below="@id/detectAs"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:alpha="0"
            android:gravity="center"
            android:letterSpacing="0.06"
            android:padding="4dp"
            android:text="@string/resultTxt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/core_sans_medium"
            android:textSize="21sp" />

<!--        <Button-->
<!--            android:id="@+id/mShowPrecaution"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingStart="30dp"-->
<!--            android:paddingEnd="30dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginEnd="40dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:alpha="0"-->
<!--            android:background="@drawable/ripple_login_btn"-->
<!--            android:fontFamily="@font/core_sans_medium"-->
<!--            android:textAllCaps="false"-->
<!--            android:includeFontPadding="false"-->
<!--            android:letterSpacing="0.1"-->
<!--            android:onClick="precaution"-->
<!--            android:padding="5dp"-->
<!--            android:text="@string/showPrecautions"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp" />-->


        <TextView
            android:id="@+id/demoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:padding="6dp"
            android:background="@drawable/white_background"
            android:alpha="1"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4dp"
            android:fontFamily="@font/core_sans_regular"
            android:text="@string/detect_txt"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>