<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/appname"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/app_name"
                    android:src="@drawable/vita_logo_removebg"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:letterSpacing="0.1"
                    android:fontFamily="@font/core_sans_regular"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:padding="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp"
                    android:src="@drawable/user"/>

                <ImageView
                    android:id="@+id/uploadpic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:elevation="4dp"
                    android:layout_alignBottom="@+id/profilepic"
                    android:layout_alignRight="@+id/profilepic"
                    android:src="@drawable/uploadpic"
                    app:tint="@color/colorAccent" />

            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Name"
                app:met_iconLeft="@drawable/profile_icon"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="@color/colorAccent"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font"
                android:fontFamily="@font/core_sans_regular"
                android:textSize="16sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/email_icon"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="@color/colorAccent"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font"
                app:met_clearButton="true"
                android:fontFamily="@font/core_sans_regular"
                android:textSize="16sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                app:met_iconLeft="@drawable/padlock"
                app:met_floatingLabel="highlight"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="@color/colorAccent"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font"
                app:met_clearButton="true"
                android:fontFamily="@font/core_sans_regular"
                android:textSize="16sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reenter Password"
                app:met_iconLeft="@drawable/padlock"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="@color/colorAccent"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font"
                android:inputType="textPassword"
                android:fontFamily="@font/core_sans_regular"
                android:textSize="16sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                app:met_iconLeft="@drawable/phone"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="@color/colorAccent"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColorHint="@color/grey_font"
                android:inputType="number"
                android:fontFamily="@font/core_sans_regular"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register"
                    android:text="@string/register"
                    android:layout_marginBottom="8dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textSize="16sp"
                    android:fontFamily="@font/core_sans_regular"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/login_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login_now"
                    android:background="@drawable/ripple_login_btn"
                    android:fontFamily="@font/core_sans_medium"
                    android:letterSpacing="0.1"
                    android:textAllCaps="false"
                    android:textSize="19sp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>